Change CSS variable names and alter HTML text
This commit changed the variable player and comp colors to primary and
secondary. Minor HTML text alterations to player scoreboard score and
updated round details text ready for JS implementation.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- SCOREBOARD -->
     <div class="scoreboard">
       <div class="player-score">
-        <p>Player: 1</p>
+        <p>Player: 0</p>
       </div>
       <div class="vs">
         <p>vs</p>
@@ -38,8 +38,8 @@
       </div>
       <div class="round-details">
         <div id="result" class="round-details-content">
-          <h2>You Win</h2>
-          <p>Computer chose Scissors</p>
+          <h2>New Game</h2>
+          <p>Let The Game Commence</p>
         </div>
       </div>
       <div class="comp-selection">
@@ -49,10 +49,10 @@
 
     <!-- PLAYER CHOICE -->
     <div class="player-choice">
-      <button class="restart-btn" tabindex="1         ">Restart Game</button>
+      <button id="restart" class="restart-btn" tabindex="1">Restart Game</button>
       <h2>Make Your Selection</h2>
       <div class="choices-container">
-        <i id="rock" class="choice-icon far fa-light fa-hand-back-fist fa-6x" aria-label="Rock" role="button"
+        <i id="rock" class="choice-icon far fa-light fa-hand-rock fa-6x" aria-label="Rock" role="button"
           tabindex="0"></i>
         <i id="paper" class="choice-icon far fa-light fa-hand fa-6x" aria-label="Paper" role="button" tabindex="0"></i>
         <i id="scissors" class="choice-icon far fa-light fa-hand-scissors fa-6x" aria-label="Scissors" role="button"
@@ -67,6 +67,7 @@
         class="github">Andrew Lee McGill</a></p>
   </footer>
 
+  <script src="js/main.js"></script>
 </body>
 
 </html>
